[B]Retrospect v5.4.9 - Changelog - 2021-11-07[/B]

t.b.d.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: Some RTV Utrecht video's did not play.
* Fixed: Apple Movie Trailers failed do to missing meta data (Fixes #1575).