@@ -11,3 +11,4 @@ _None_
 [B]Channel related[/B]
 * Fixed: Some RTV Utrecht video's did not play.
 * Fixed: Apple Movie Trailers failed do to missing meta data (Fixes #1575).
+* Fixed: RTV Utrecht moved to Regio Groei platform.
